# VGCPU-Benchmark

./: .clang-format  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPLIANCE_REPORT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  USAGE.md  WORKPLAN.md  install_cairo.ps1  rust-toolchain.toml
.agent/rules/: follow-blueprint.md
.github/workflows/: ci.yml  release.yml
assets/scenes/: manifest.json
assets/scenes/fills/: gradients_linear.irbin  nested_rects.irbin  solid_basic.irbin  spiral_circles.irbin
assets/scenes/strokes/: strokes_curves.irbin
assets/scenes/validation/: noop.irbin
blueprint/: Appendix A Tools Technology.md  Appendix B Testing Strategy.md  Appendix C Debugging.md  Appendix D Coding Standards.md  Appendix E CI CD Pipeline.md  Appendix F Licensing.md  Chapter 1 Introduction.md  Chapter 10 Observability.md  Chapter 11 Deployment.md  Chapter 12 Incremental.md  Chapter 13 Risk Management.md  Chapter 14 Documentation.md  Chapter 15 Glossary.md  Chapter 2 Requirements.md  Chapter 3 Constraints.md  Chapter 4 System Architecture.md  Chapter 5 Data Design.md  Chapter 6 Interfaces.md  Chapter 7 Component Design.md  Chapter 8 Runtime Behavior.md  Chapter 9 Security Privacy.md  blueprint_v1.0_ch0_metadata.md  blueprint_v1.0_ch1_scope.md  blueprint_v1.0_ch2_system_architecture.md  blueprint_v1.0_ch3_component_design.md  blueprint_v1.0_ch4_interfaces_api_abi.md  blueprint_v1.0_ch5_data_design_hotpath.md  blueprint_v1.0_ch6_concurrency_parallelism.md  blueprint_v1.0_ch7_build_toolchain.md  blueprint_v1.0_ch8_tooling.md  blueprint_v1.0_ch9_versioning_lifecycle.md  blueprint_v1.1_ch0_metadata.md  blueprint_v1.1_ch1_scope.md  blueprint_v1.1_ch2_system_architecture.md  blueprint_v1.1_ch3_component_design.md  blueprint_v1.1_ch4_interfaces_api_abi.md  blueprint_v1.1_ch5_data_design_hotpath.md  blueprint_v1.1_ch6_concurrency_parallelism.md  blueprint_v1.1_ch7_build_toolchain.md  blueprint_v1.1_ch8_tooling.md  (+6 more)
blueprint/backends/: agg.md  amanithvg.md  blend2d.md  cairo.md  plutovg.md  qt.md  raqote.md  skia.md  thorvg.md  vello.md
cmake/: vgcpu_deps.cmake  vgcpu_options.cmake  vgcpu_sanitizers.cmake  vgcpu_third_party_hashes.cmake
cr/: CR-0000_TEMPLATE.md  CR-0001_adopt_blueprint_v1.md  CR-0002_png_artifacts_and_ssim_regression.md
docs/: MIGRATION_v0.2.0.md  QUICKSTART.md
docs/legacy_blueprint/: Appendix B Testing Strategy.md  Appendix E CI CD Pipeline.md  Chapter 1 Introduction.md  Chapter 11 Deployment.md  Chapter 13 Risk Management.md  Chapter 3 Constraints.md  Chapter 5 Data Design.md
docs/legacy_blueprint/backends/: amanithvg.md  cairo.md  qt.md
include/vgcpu/artifacts/: naming.hpp  png_reader.hpp  png_writer.hpp  ssim_compare.hpp
include/vgcpu/internal/: alloc_tracker.h  export.h  log.h  version.h
perf/: perf_suite_scenes.txt
rust_bridge/: Cargo.toml  rust-toolchain.toml
rust_bridge/raqote_ffi/: Cargo.toml
rust_bridge/raqote_ffi/src/: lib.rs
rust_bridge/vello_ffi/: Cargo.toml
rust_bridge/vello_ffi/src/: lib.rs
scripts/: package_release.sh
src/adapters/: adapter_interface.h  adapter_registry.cpp  adapter_registry.h
src/adapters/agg/: agg_adapter.cpp  agg_adapter.h
src/adapters/amanithvg/: amanithvg_adapter.cpp  amanithvg_adapter.h
src/adapters/blend2d/: blend2d_adapter.cpp  blend2d_adapter.h
src/adapters/cairo/: cairo_adapter.cpp  cairo_adapter.h
src/adapters/null/: null_adapter.cpp  null_adapter.h
src/adapters/plutovg/: plutovg_adapter.cpp  plutovg_adapter.h
src/adapters/qt/: qt_adapter.cpp  qt_adapter.h
src/adapters/raqote/: raqote_adapter.cpp  raqote_adapter.h
src/adapters/skia/: skia_adapter.cpp  skia_adapter.h
src/adapters/thorvg/: thorvg_adapter.cpp  thorvg_adapter.h
src/adapters/vello/: vello_adapter.cpp  vello_adapter.h
src/artifacts/: naming.cpp  png_reader.cpp  png_writer.cpp  ssim_compare.cpp  stb_image_write_impl.cpp
src/assets/: scene_registry.cpp  scene_registry.h
src/cli/: cli_parser.cpp  cli_parser.h  main.cpp
src/common/: alloc_tracker.cpp  capability_set.h  status.cpp  status.h
src/harness/: harness.cpp  harness.h  statistics.cpp  statistics.h
src/ir/: ir_format.h  ir_loader.cpp  ir_loader.h  prepared_scene.cpp  prepared_scene.h
src/pal/: environment.cpp  environment.h  timer.cpp  timer.h
src/reporting/: csv_writer.cpp  json_writer.cpp  reporter.h  summary_writer.cpp
tests/: test_artifacts.cpp  test_concurrency.cpp  test_hotpath.cpp  test_main.cpp  test_pal.cpp  test_registry.cpp
tools/: check_includes.py  check_no_temp_dbg.py  ci_smoke_ssim.sh  format_all.sh  format_check.sh  ir_generator.py  perf_diff.py  run_perf_suite.sh  validate_report_csv.py  validate_report_json.py
